# zk-fuzzer-ultra

./: Cargo.toml  README.md  TEST_REPORT.md  VERIFICATION_REPORT.md
cli/: main.rs
core/: constraints.rs  emulator.rs  mod.rs  parser.rs  tcct.rs
examples/: ml_fitness_demo.rs
reporting/: formatter.rs
src/: cache.rs  constraint_solver.rs  distributed.rs  integration.rs  lib.rs  metrics.rs  monitor.rs  property_testing.rs
src/analysis/: feature_extraction.rs  llm.rs  mod.rs  static_analysis.rs  symbolic.rs
src/cli/: mod.rs
src/core/: constraints.rs  emulator.rs  mod.rs  parser.rs  tcct.rs
src/dashboard/: mod.rs  routes.rs  server.rs
src/fuzzing/: coverage.rs  genetic.rs  input_gen.rs  mod.rs  mutator.rs
src/targets/: circom.rs  gnark.rs  halo2.rs  mod.rs  noir.rs
static/: app.js  index.html  style.css
targets/: gnark.rs  halo2.rs  mod.rs
